--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,9 +1,9 @@
 {
   "docsets_to_publish": [
     {
-      "docset_name": "Test",
-      "build_source_folder": "Test",
-      "build_output_subfolder": "Test",
+      "docset_name": "Test01",
+      "build_source_folder": "Docs/Test01",
+      "build_output_subfolder": "Test01",
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [],
