--- a/Docs/Test01/TOC.yml
+++ b/Docs/Test01/TOC.yml
@@ -1,2 +1,6 @@
 - name: Index
   href: index.md
+
+- name:# [Home](index.md)
+- name:## [Table](index.md)
+- name:### [empty-row-or-column](Table/empty-row-or-column.md)
